[package]
name = "sdl"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.6"
log = "0.4.26"
nom = "8.0.0"
pest = "2.7.15"
serde = { version = "1.0.218", features = ["derive"]}
tokio = { version = "1.43.0", features = ["full"]}

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmarks"
path = "bench/benchmarks.rs"